--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,372 @@
 .page {
     min-width: 1100px;
-    /* мы ещё не умеем делать мобильную версию сайта, */
-    /* поэтому выше установлена минимальная ширина страницы */
     max-width: 1600px;
-    /* выше установили ограничение по максимальной ширине */
     margin: 0 auto;
-    /* выше для экранов больше 1600px отцентрировали весь контент */
     font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .header {
+    display: flex;
     height: 100vh;
     min-height: 600px;
     max-height: 756px;
-    /* выше установили ограничения для секции */
+    background-color:  #F2F2F2;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.logo{
+  display: flex;
+  position: absolute;
+  object-fit: contain;
+  z-index: 10;
+  background-repeat: no-repeat;
+}
+
+.logo_place_header{
+    width: 183px;
+    height: 32px;
+    left: 64px;
+    top: 30px;
+    background-image: url(../images/logo.svg);
+}
+
+.header__title{
+    align-self: center;
+    flex-direction: column;
+    width: 100%;
+    text-align: left;
+    width: 730px;
+    font-weight: bold;
+    line-height: 96px;
+    font-size: 102px;
+    margin-left: 64px;
+}
+
+.header__subtitle{
+    position: absolute;
+    width: 388px;
+    line-height: 25px;
+    font-size: 18px;
+    left: 64px;
+    bottom: 30px;
+    z-index: 10;
+
+}
+
+.header__link{
+    text-decoration: none;
+}
+
+.header__main-illustration{
+    width: 765px;
+    height: 608px;
+    background-image: url(../images/two_again.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    bottom: 0px;
+    right: 0px;
+    position: absolute;
+    z-index: 1;
+}
+
 .header__square-pic {
     height: 568px;
     width: 568px;
+    background-color: #2F80ED;
+    position: absolute;
+    top: 64px;
+    right: 0px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
+.description{
+    display: flex;
+    justify-content: center;
+    margin: 100px 0;
+}
+
+.two-columns{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.two-columns__brief{
+    width: 175px;
+    line-height: 1.2;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.two-columns__main-text{
+    display: flex;
+    width: 80%;
+    min-width: 784px;
+    justify-content: space-between;
+}
+
+.two-columns__paragraph{
+    line-height: 34px;
+    font-size: 24px;
+}
+
+.spaces{
+    margin: 0px;
+}
+
+.spaces-add{
+    margin: 30px 0px;
+}
+
+.two-columns__span-accent{
+    font-weight: bold;
+    line-height: 34px;
+    font-size: 24px;
+}
+
+.digits{
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    margin: 100px 0;
+    flex-direction: column;
+}
+
+.section-title{
+    margin: 0px;
+    width: 60%;
+    display: flex;
+    align-self: center;
+    justify-content: center;
+    font-size: 60px;
+    font-weight: bold;
+    line-height: 69px;
+}
+
+.section-title_theme_white{
+  margin-top: 100px;
+  margin-bottom: 20px;
+}
+
+.section-subtitle{
+  margin: 0px;
+  width: 60%;
+  display: flex;
+  line-height: 34px;
+  font-size: 24px;
+  align-self: center;
+  justify-content: center;
+}
+
+.table{
+  display: flex;
+  width: 1100px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-around;
+}
+
+.table_theme_white{
+  margin: 0px auto 100px;
+}
+
+.table__heading{
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+.table__cell{
+  justify-content: space-between;
+}
+
+.table__cell_theme_white{
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__text{
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+.table__text_bank{
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.feinman{
+  height: 790px;
+  background-color: #F2F2F2;
+  display: flex;
+  background-image: url(../images/feinman.png);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 867px 637px;
+  flex-direction: column;
+  position: relative;
+}
+
+.feinman__title{
+  margin: 100px auto 70px;
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+  align-self: center;
+}
+
+.feinman__subtitle{
+  align-self: center;
+  line-height: 51px;
+  font-size: 36px;
+}
+
+.feinman__link{
+  position: absolute;
+  line-height: 51px;
+  font-size: 36px;
+  top: 50%;
+  right: 0px;
+  text-decoration: none;
+}
+
+.kaufman{
+  background-color: #1F1F1F;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  flex-direction: column;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+
+.kaufman__triangle{
+  width: 877px;
+  height: 100%;
+  background-image: url(../images/triangle.svg);
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
+
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  z-index: -1;
+  background-position: 210px 0px;
+}
+
+.section-title_theme_dark{
+  color: white;
+  margin-top: 90px;
+  margin-bottom: 20px;
+}
+
+.section-subtitle_theme_dark{
+  color: white;
+}
+
+.table_theme_dark{
+  margin: 0px auto 90px;
+}
+
 .table__cell_theme_dark {
-    width: 200px;
-    color: white;
-    margin-right: 0;
-    margin-top: 80px;
+  width: 200px;
+  color: white;
+  margin-right: 0;
+  margin-top: 80px;
+}
+
+.footer {
+  display: flex;
+  background-color: #1F1F1F;
+  min-height: 350px;
+}
+
+.footer__columns{
+  display: flex;
+  justify-self: center;
+  width: 90%;
+  margin: 60px auto 40px;
+  justify-content: space-between;
+}
+
+.footer__column{
+  color: white;
+  justify-self: center;
+}
+
+.footer__column_content_copyright{
+  display: flex;
+  flex-basis: 711px;
+}
+
+.logo_place_footer{
+  width: 183px;
+  height: 35px;
+  background-image: url(../images/logo_white.svg);
+}
+
+.footer__author{
+  display: flex;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 18px 0px;
+  align-items: flex-end;
+}
+
+.footer__author::before{
+  content: '\00A9';
+}
+
+.footer__column_content_info{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__column-heading{
+  display: flex;
+  margin: 0px;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.footer__column-links{
+  padding: 0px;
+  margin: 0px;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  list-style: none;
+}
+
+.footer__column_content_social{
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__social-icon{
+  padding: 0px;
+  margin: 0px;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  text-decoration: none;
+  list-style: none;
+}
+
+.footer__social-icon_facebook::before {
+  content: url(../images/facebook_white.svg);
+  padding-right: 10px;
+}
+
+.footer__social-icon_vk::before {
+  content: url(../images/vk_white.svg);
+  padding-right: 10px;
+}
+
+.footer__social-icon_instagram::before {
+  content: url(../images/instagram_white.svg);
+  padding-right: 10px;
 }
