--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 }
 
 .header {
+    position: relative;
     display: flex;
     height: 100vh;
     min-height: 600px;
@@ -15,10 +16,10 @@
 
 .logo{
   display: flex;
-  position: absolute;
   object-fit: contain;
   z-index: 10;
   background-repeat: no-repeat;
+  position: absolute;
 }
 
 .logo_place_header{
@@ -49,10 +50,10 @@
     left: 64px;
     bottom: 30px;
     z-index: 10;
-
 }
 
 .header__link{
+    color:  #2F80ED;
     text-decoration: none;
 }
 
@@ -90,10 +91,11 @@
 }
 
 .two-columns__brief{
+    margin: 0px;
+    color:  #2F80ED;
     width: 175px;
     line-height: 1.2;
     font-size: 18px;
-    text-decoration: none;
 }
 
 .two-columns__main-text{
@@ -104,15 +106,15 @@
 }
 
 .two-columns__paragraph{
-    line-height: 34px;
-    font-size: 24px;
+  line-height: 34px;
+  font-size: 24px;
 }
 
-.spaces{
+.two-columns__paragraph_spaces{
     margin: 0px;
 }
 
-.spaces-add{
+.two-columns__paragraph_spaces-add{
     margin: 30px 0px;
 }
 
@@ -139,11 +141,8 @@
     font-size: 60px;
     font-weight: bold;
     line-height: 69px;
-}
-
-.section-title_theme_white{
-  margin-top: 100px;
-  margin-bottom: 20px;
+    margin-top: 100px;
+    margin-bottom: 20px;
 }
 
 .section-subtitle{
@@ -159,14 +158,11 @@
 .table{
   display: flex;
   width: 1100px;
+  margin: 0px auto 100px;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-around;
-}
-
-.table_theme_white{
-  margin: 0px auto 100px;
 }
 
 .table__heading{
@@ -178,13 +174,11 @@
 }
 
 .table__cell{
+  width: 250px;
+  margin-top: 60px;
   justify-content: space-between;
 }
 
-.table__cell_theme_white{
-  width: 250px;
-  margin-top: 60px;
-}
 
 .table__text{
   line-height: 1.2;
@@ -219,17 +213,19 @@
 }
 
 .feinman__subtitle{
+  margin: 0px;
   align-self: center;
   line-height: 51px;
   font-size: 36px;
 }
 
 .feinman__link{
+  color:  black;
   position: absolute;
   line-height: 51px;
   font-size: 36px;
   top: 50%;
-  right: 0px;
+  align-self: flex-end;
   text-decoration: none;
 }
 
@@ -246,16 +242,13 @@
 
 .kaufman__triangle{
   width: 877px;
-  height: 100%;
+  height: 877px;
   background-image: url(../images/triangle.svg);
   background-repeat: no-repeat;
-  background-size: 877px 877px;
-
   position: absolute;
   top: 0px;
-  right: 0px;
+  right: -210px;
   z-index: -1;
-  background-position: 210px 0px;
 }
 
 .section-title_theme_dark{
@@ -339,6 +332,10 @@
   margin: 0px;
   margin-top: 20px;
   margin-bottom: 16px;
+  color: white;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
   list-style: none;
 }
 
@@ -347,26 +344,17 @@
   flex-direction: column;
 }
 
-.footer__social-icon{
-  padding: 0px;
-  margin: 0px;
-  margin-top: 20px;
-  margin-bottom: 16px;
-  text-decoration: none;
-  list-style: none;
-}
-
-.footer__social-icon_facebook::before {
+.footer__column-links_facebook::before {
   content: url(../images/facebook_white.svg);
   padding-right: 10px;
 }
 
-.footer__social-icon_vk::before {
+.footer__column-links_vk::before {
   content: url(../images/vk_white.svg);
   padding-right: 10px;
 }
 
-.footer__social-icon_instagram::before {
+.footer__column-links_instagram::before {
   content: url(../images/instagram_white.svg);
   padding-right: 10px;
 }
