--- a/styles/style.css
+++ b/styles/style.css
@@ -19,10 +19,10 @@
   object-fit: contain;
   z-index: 10;
   background-repeat: no-repeat;
-  position: absolute;
 }
 
 .logo_place_header{
+  position: absolute;
     width: 183px;
     height: 32px;
     left: 64px;
@@ -96,29 +96,28 @@
     width: 175px;
     line-height: 1.2;
     font-size: 18px;
+    font-weight: normal;
 }
 
 .two-columns__main-text{
     display: flex;
     width: 80%;
     min-width: 784px;
+    line-height: 34px;
+    font-size: 24px;
     justify-content: space-between;
 }
 
 .two-columns__paragraph{
+  margin: 0px;
   line-height: 34px;
   font-size: 24px;
-}
-
-.two-columns__paragraph_spaces{
-    margin: 0px;
-}
-
-.two-columns__paragraph_spaces-add{
-    margin: 30px 0px;
+  padding: 0px;
+  margin: 0px;
 }
 
 .two-columns__span-accent{
+    margin: 30px 0px;
     font-weight: bold;
     line-height: 34px;
     font-size: 24px;
@@ -185,11 +184,6 @@
   font-size: 18px;
 }
 
-.table__text_bank{
-  margin-top: 20px;
-  margin-bottom: 0px;
-}
-
 .feinman{
   height: 790px;
   background-color: #F2F2F2;
@@ -224,6 +218,7 @@
   position: absolute;
   line-height: 51px;
   font-size: 36px;
+  right: 48px;
   top: 50%;
   align-self: flex-end;
   text-decoration: none;
@@ -245,6 +240,7 @@
   height: 877px;
   background-image: url(../images/triangle.svg);
   background-repeat: no-repeat;
+  background-size: contain;
   position: absolute;
   top: 0px;
   right: -210px;
@@ -284,16 +280,19 @@
   width: 90%;
   margin: 60px auto 40px;
   justify-content: space-between;
+  border: 1px red solid;
 }
 
 .footer__column{
   color: white;
-  justify-self: center;
 }
 
 .footer__column_content_copyright{
   display: flex;
   flex-basis: 711px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .logo_place_footer{
@@ -303,11 +302,12 @@
 }
 
 .footer__author{
+  border: 1px red solid;
   display: flex;
   font-size: 18px;
   line-height: 25px;
   margin: 18px 0px;
-  align-items: flex-end;
+
 }
 
 .footer__author::before{
@@ -327,7 +327,7 @@
   font-weight: bold;
 }
 
-.footer__column-links{
+.footer__column-link{
   padding: 0px;
   margin: 0px;
   margin-top: 20px;
@@ -344,17 +344,17 @@
   flex-direction: column;
 }
 
-.footer__column-links_facebook::before {
+.footer__column-link_facebook::before {
   content: url(../images/facebook_white.svg);
   padding-right: 10px;
 }
 
-.footer__column-links_vk::before {
+.footer__column-link_vk::before {
   content: url(../images/vk_white.svg);
   padding-right: 10px;
 }
 
-.footer__column-links_instagram::before {
+.footer__column-link_instagram::before {
   content: url(../images/instagram_white.svg);
   padding-right: 10px;
 }
