--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,9 +1,7 @@
 @import url(./kaufman__triangle/kaufman__triangle.css);
-@import url(/blocks/section-title/section-title.css);
-@import url(/blocks/section-subtitle/section-subtitle.css);
-@import url(/blocks/table/table.css);
 
 .kaufman{
+  padding-top: 90px;
   background-color: #1F1F1F;
   display: flex;
   justify-content: center;
