--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,8 @@
 .khan__book-pic{
+  margin: 0px;
   height: 608px;
   width: 620px;
+  object-fit: cover;
+  object-position: left;
   margin-right: 48px;
 }
