--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -7,3 +7,8 @@
 @import url(./__book-pic/khan__book-pic.css);
 @import url(./__container/khan__container.css);
 @import url(./__book-container/khan__book-container.css);
+
+.khan{
+  background-color: #F2F2F2;
+  padding-top: 105px;
+}
