--- a/blocks/resources/resources.css
+++ b/blocks/resources/resources.css
@@ -1,9 +1,8 @@
 @import url(./__logo/resources__logo.css);
 @import url(./__logo-zone/resources__logo-zone.css);
-@import url(/blocks/section-title/section-title.css);
-@import url(/blocks/section-subtitle/section-subtitle.css);
 
 .resources{
+  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: center;
