--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -8,7 +8,7 @@
   justify-content: center;
   font-size: 60px;
   font-weight: bold;
-  line-height: 69px;
-  margin-top: 100px;
+  line-height: 1.15;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
