--- a/blocks/footer/__column-link/_facebook::before/footer__column-link_facebook::before.css
+++ b/blocks/footer/__column-link/_facebook::before/footer__column-link_facebook::before.css
@@ -1,4 +1,4 @@
 .footer__column-link_facebook::before {
-  content: url(/images/facebook_white.svg);
+  content: url('../../../../images/facebook_white.svg');
   padding-right: 10px;
 }
