--- a/blocks/footer/__column-link/_instagram::before/footer__column-link_instagram::before.css
+++ b/blocks/footer/__column-link/_instagram::before/footer__column-link_instagram::before.css
@@ -1,4 +1,4 @@
 .footer__column-link_instagram::before {
-  content: url(/images/instagram_white.svg);
+  content: url('../../../../images/instagram_white.svg');
   padding-right: 10px;
 }
