--- a/blocks/header/__main-illustration/header__main-illustration.css
+++ b/blocks/header/__main-illustration/header__main-illustration.css
@@ -1,7 +1,7 @@
 .header__main-illustration{
   width: 765px;
   height: 608px;
-  background-image: url(/images/two_again.png);
+  background-image: url('../../../images/two_again.png');
   background-size: cover;
   background-repeat: no-repeat;
   bottom: 0px;
