--- a/blocks/footer/__column-link/_vk::before/footer__column-link_vk::before.css
+++ b/blocks/footer/__column-link/_vk::before/footer__column-link_vk::before.css
@@ -1,4 +1,4 @@
 .footer__column-link_vk::before {
-  content: url('../../../../images/fvk_white.svg');
+  content: url('../../../../images/vk_white.svg');
   padding-right: 10px;
 }
