--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -3,6 +3,9 @@
 @import url(./__author/footer__author.css);
 @import url(./__column-link/footer__column-link.css);
 @import url(./__column-heading/footer__column-heading.css);
+@import url(./_content_copyright/footer__column_content_copyright.css);
+@import url(./_content_info/footer__column_content_info.css);
+@import url(./_content_social/footer__column_content_social.css);
 
 .footer {
   display: flex;
