--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -3,6 +3,6 @@
   height: 608px;
   width: 620px;
   object-fit: cover;
-  object-position: left;
+  object-position: top left;
   margin-right: 48px;
 }
