--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,6 +1,5 @@
 .video__iframes{
   display: flex;
-  margin: auto;
-  margin-top: 50px;
+  transform: translate(0, 50px);
   justify-content: center;
 }
