--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,15 @@
 @import url(./__columns/footer__columns.css);
 @import url(./__column/footer__column.css);
+@import url(./__column/_content_copyright/footer__column_content_copyright.css);
+@import url(./__column/_content_info/footer__column_content_info.css);
+@import url(./__column/_content_social/footer__column_content_social.css);
 @import url(./__author/footer__author.css);
+@import url(./__author/::before/footer__author::before.css);
 @import url(./__column-link/footer__column-link.css);
+@import url(./__column-link/_facebook::before/footer__column-link_facebook::before.css);
+@import url(./__column-link/_instagram::before/footer__column-link_instagram::before.css);
+@import url(./__column-link/_vk::before/footer__column-link_vk::before.css);
 @import url(./__column-heading/footer__column-heading.css);
-@import url(./_content_copyright/footer__column_content_copyright.css);
-@import url(./_content_info/footer__column_content_info.css);
-@import url(./_content_social/footer__column_content_social.css);
 
 .footer {
   display: flex;
